# xf86-video-scfb

./: .gitignore  configure.ac
man/: scfb.man
src/: compat-api.h  scfb_driver.c
